# opthuffmancodec

./: .clang-format  CMakeLists.txt  README.md
src/: huffman_coarse.cuh  testhuff.cu
